# drive-cycle-visualisation

./: 0_Trip_Visualisation.py  Home.py  LICENSE  README.md  data_analysis.py  data_loader.py  main.py  normalized_power.csv  pyproject.toml
.streamlit/: config.toml
pages/: 0_Preconditioning.py  0_Trip_Visualisation.py  1_All_Data.py  1_Preconditioning.py  2_About.py  2_Clustering.py  2_User_Behaviour.py  2_User_Power_Behaviour.py  3_User_Behaviour  3_User_Behaviour.py  3_User_Weekly_Behaviour.py  4_Clustering.py  __init__.py  all_data.py  page1.py  user_behaviour.py
